--- a/examples/vanilla-ts-client/index.html
+++ b/examples/vanilla-ts-client/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class="flex flex-col items-start p-2">
+<div class="flex flex-col items-start">
 
     <div class="flex flex-col my-1">
         <div class="form-control w-full max-w-xs">
