--- a/examples/vanilla-ts-client/index.html
+++ b/examples/vanilla-ts-client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-base-200">
 <head>
     <meta charset="UTF-8"/>
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
@@ -8,52 +8,96 @@
 </head>
 <body>
 
-<div class="flex flex-col items-start">
+<div class="flex flex-row flex-wrap items-start p-2">
+    <div class="flex flex-col">
+        <div class="w-[500px] card bg-base-100 shadow-xl m-1">
+            <div class="card-body">
+                <div class="flex flex-col my-1">
+                    <div class="form-control w-full">
+                        <label class="label" for="room-id-input">
+                            <span class="label-text">Room Id</span>
+                        </label>
+                        <input type="text" id="room-id-input" placeholder=""
+                               class="input input-bordered w-full input-info"/>
+                    </div>
 
-    <div class="flex flex-col my-1">
-        <div class="form-control w-full max-w-xs">
-            <label class="label" for="room-id-input">
-                <span class="label-text">Room Id</span>
-            </label>
-            <input type="text" id="room-id-input" placeholder="" class="input input-bordered w-96 input-info"/>
+                    <div class="form-control w-full">
+                        <label class="label" for="peer-id-input">
+                            <span class="label-text">Peer Id</span>
+                        </label>
+                        <input type="text" id="peer-id-input" placeholder=""
+                               class="input input-bordered w-full input-info"/>
+                    </div>
+
+                    <div class="form-control w-full">
+                        <label class="label" for="peer-name-input">
+                            <span class="label-text">Peer name</span>
+                        </label>
+                        <input type="text" id="peer-name-input" placeholder=""
+                               class="input input-bordered w-full input-success"/>
+                    </div>
+                </div>
+
+                <div class="flex flex-row my-1">
+                    <button id="connect-btn" class="btn btn-success m-1">Connect</button>
+                    <button id="disconnect-btn" class="btn btn-error m-1">Disconnect</button>
+                </div>
+            </div>
         </div>
-
-        <div class="form-control w-full max-w-xs">
-            <label class="label" for="peer-id-input">
-                <span class="label-text">Peer Id</span>
-            </label>
-            <input type="text" id="peer-id-input" placeholder="" class="input input-bordered w-96 input-info"/>
+        <div class="card bg-base-100 shadow-xl m-1 h-[300px]">
+            <div class="card-body">
+                <h2 class="card-title">Canvas track</h2>
+                <div class="flex flex-row my-1">
+                    <button id="add-track-btn" class="btn btn-success m-1">Add track</button>
+                    <button id="remove-track-btn" class="btn btn-error m-1">Remove track</button>
+                </div>
+                <video id="local-track-video" class="w-[200px]" playsInline muted></video>
+            </div>
         </div>
+    </div>
+    <div class="w-[600px]  card bg-base-100 shadow-xl m-1">
+        <div class="card-body">
+            <div class="flex flex-row my-1 justify-center">
+                <button id="enumerate-devices-btn" class="btn btn-info m-1">List video devices</button>
+            </div>
 
-        <div class="form-control w-full max-w-xs">
-            <label class="label" for="peer-name-input">
-                <span class="label-text">Peer name</span>
-            </label>
-            <input type="text" id="peer-name-input" placeholder="" class="input input-bordered w-96 input-success"/>
+            <template id="video-player-template">
+                <div class="mb-2">
+                    <div class="flex flex-row justify-between">
+                        <div>
+                            <button class="btn btn-success m-1 start-template-btn">Start</button>
+                            <button class="btn btn-error m-1 stop-template-btn">Stop</button>
+                        </div>
+                        <div>
+                            <button id="add-track-template-btn" class="btn btn-success m-1">Add track</button>
+                            <button id="remove-track-template-btn" class="btn btn-error m-1">Remove track</button>
+                        </div>
+                    </div>
+                    <div class="flex flex-col">
+                        <div class="device-label"></div>
+                        <div class="device-id hidden"></div>
+                    </div>
+                    <div class="flex flex-row flex-nowrap justify-center">
+                        <video class="video-player" playsInline muted></video>
+                    </div>
+                </div>
+            </template>
+
+            <div id="video-players">
+            </div>
         </div>
     </div>
 
-    <div class="flex flex-row my-1">
-        <button id="connect-btn" class="btn btn-success m-1">Connect</button>
-        <button id="disconnect-btn" class="btn btn-error m-1 hidden">Disconnect</button>
-    </div>
 
-    <div class="flex flex-row my-1">
-        <button id="add-track-btn" class="btn btn-success m-1 btn-disabled">Add track</button>
-        <button id="remove-track-btn" class="btn btn-error m-1 hidden">Remove track</button>
-    </div>
-
-    <video id="local-track-video" class="" playsInline muted></video>
-
-<!--    <button id="refresh-code-btn" class="btn btn-error m-1">Refresh</button>-->
-<!--    <div class="mockup-code m-1">-->
-<!--        <pre>-->
-<!--        <small>-->
-<!--          <code id="client-state-id">-->
-<!--          </code>-->
-<!--        </small>-->
-<!--        </pre>-->
-<!--    </div>-->
+    <!--    <button id="refresh-code-btn" class="btn btn-error m-1">Refresh</button>-->
+    <!--    <div class="mockup-code m-1">-->
+    <!--        <pre>-->
+    <!--        <small>-->
+    <!--          <code id="client-state-id">-->
+    <!--          </code>-->
+    <!--        </small>-->
+    <!--        </pre>-->
+    <!--    </div>-->
 
 </div>
 
