--- a/examples/vanilla-ts-client/index.html
+++ b/examples/vanilla-ts-client/index.html
@@ -8,13 +8,13 @@
   </head>
 
   <body>
-    <div id="toast-container" class="z-10 max-w-sm fixed left-1/2 -translate-x-1/2 flex flex-col">
+    <div id="toast-container" class="fixed left-1/2 z-10 flex max-w-sm -translate-x-1/2 flex-col">
       <template id="toast-alert-template">
-        <div class="alert alert-error shadow-lg duration-700 box-border cursor-pointer">
+        <div class="alert alert-error box-border cursor-pointer shadow-lg duration-700">
           <div>
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              class="stroke-current flex-shrink-0 h-6 w-6"
+              class="h-6 w-6 flex-shrink-0 stroke-current"
               fill="none"
               viewBox="0 0 24 24"
             >
@@ -37,7 +37,7 @@
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
               viewBox="0 0 24 24"
-              class="stroke-current flex-shrink-0 w-6 h-6"
+              class="h-6 w-6 flex-shrink-0 stroke-current"
             >
               <path
                 stroke-linecap="round"
@@ -56,7 +56,7 @@
           <div>
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              class="stroke-current flex-shrink-0 h-6 w-6"
+              class="h-6 w-6 flex-shrink-0 stroke-current"
               fill="none"
               viewBox="0 0 24 24"
             >
@@ -75,13 +75,13 @@
 
     <div class="flex flex-row flex-wrap items-start p-2">
       <template id="remote-peer-template-card">
-        <div class="mb-2 card bg-base-100 shadow-xl m-1" data-peer-id="">
+        <div class="card m-1 mb-2 bg-base-100 shadow-xl" data-peer-id="">
           <div class="card-body">
             <div class="flex flex-row justify-between">
               <h2>Client: <span class="remote-peer-template-id">Remote peer id</span></h2>
             </div>
             <div class="flex flex-row flex-nowrap justify-center">
-              <video class="remote-peer-template-video w-[200px] h-[150px]" playsinline muted></video>
+              <video class="remote-peer-template-video h-[150px] w-[200px]" playsinline muted></video>
             </div>
           </div>
         </div>
@@ -91,12 +91,12 @@
         <div class="mb-2">
           <div class="flex flex-row justify-between">
             <div>
-              <button class="btn btn-success m-1 start-template-btn">Start</button>
-              <button class="btn btn-error m-1 stop-template-btn">Stop</button>
+              <button class="start-template-btn btn-success btn m-1">Start</button>
+              <button class="stop-template-btn btn-error btn m-1">Stop</button>
             </div>
             <div>
-              <button class="btn btn-success m-1 add-track-template-btn">Add track</button>
-              <button class="btn btn-error m-1 remove-track-template-btn">Remove track</button>
+              <button class="add-track-template-btn btn-success btn m-1">Add track</button>
+              <button class="remove-track-template-btn btn-error btn m-1">Remove track</button>
             </div>
           </div>
           <div class="flex flex-col">
@@ -104,15 +104,15 @@
             <div class="device-id hidden"></div>
           </div>
           <div class="flex flex-row flex-nowrap justify-center">
-            <video class="video-player w-[200px] h-[150px]" playsinline muted></video>
+            <video class="video-player h-[150px] w-[200px]" playsinline muted></video>
           </div>
         </div>
       </template>
 
       <div class="flex flex-col">
-        <div class="w-[500px] card bg-base-100 shadow-xl m-1">
+        <div class="card m-1 w-[500px] bg-base-100 shadow-xl">
           <div class="card-body">
-            <div class="flex flex-col my-1">
+            <div class="my-1 flex flex-col">
               <div class="form-control w-full">
                 <label class="label" for="peer-token-input">
                   <span class="label-text">Peer Token</span>
@@ -121,7 +121,7 @@
                   type="text"
                   id="peer-token-input"
                   placeholder=""
-                  class="input input-bordered w-full input-info"
+                  class="input-bordered input-info input w-full"
                 />
               </div>
 
@@ -133,23 +133,23 @@
                   type="text"
                   id="peer-name-input"
                   placeholder=""
-                  class="input input-bordered w-full input-success"
+                  class="input-bordered input-success input w-full"
                 />
               </div>
             </div>
 
-            <div class="flex flex-row my-1">
-              <button id="connect-btn" class="btn btn-success m-1">Connect</button>
-              <button id="disconnect-btn" class="btn btn-error m-1">Disconnect</button>
+            <div class="my-1 flex flex-row">
+              <button id="connect-btn" class="btn-success btn m-1">Connect</button>
+              <button id="disconnect-btn" class="btn-error btn m-1">Disconnect</button>
             </div>
           </div>
         </div>
-        <div class="card bg-base-100 shadow-xl m-1 h-[300px] show-if-connected">
+        <div class="show-if-connected card m-1 h-[300px] bg-base-100 shadow-xl">
           <div class="card-body">
             <h2 class="card-title">Canvas track</h2>
-            <div class="flex flex-row my-1">
-              <button id="add-track-btn" class="btn btn-success m-1">Add track</button>
-              <button id="remove-track-btn" class="btn btn-error m-1">Remove track</button>
+            <div class="my-1 flex flex-row">
+              <button id="add-track-btn" class="btn-success btn m-1">Add track</button>
+              <button id="remove-track-btn" class="btn-error btn m-1">Remove track</button>
             </div>
             <div class="flex flex-row flex-nowrap justify-center">
               <video id="local-track-video" class="w-[200px]" playsinline muted></video>
@@ -157,24 +157,24 @@
           </div>
         </div>
 
-        <div class="card bg-base-100 shadow-xl m-1 h-[300px] show-if-connected">
+        <div class="show-if-connected card m-1 h-[300px] bg-base-100 shadow-xl">
           <div class="card-body">
             <h2 class="card-title">Screen sharing</h2>
             <div id="screen-sharing-container"></div>
           </div>
         </div>
       </div>
-      <div class="w-[600px] card bg-base-100 shadow-xl m-1 show-if-connected">
+      <div class="show-if-connected card m-1 w-[600px] bg-base-100 shadow-xl">
         <div class="card-body">
-          <div class="flex flex-row my-1 justify-center">
-            <button id="enumerate-devices-btn" class="btn btn-info m-1">List video devices</button>
+          <div class="my-1 flex flex-row justify-center">
+            <button id="enumerate-devices-btn" class="btn-info btn m-1">List video devices</button>
           </div>
 
           <div id="video-players"></div>
         </div>
       </div>
 
-      <div id="remote-peers-container" class="m-1 show-if-connected hidden">
+      <div id="remote-peers-container" class="show-if-connected m-1 hidden">
         <div class="card-body">
           <h2 class="card-title">Remote peers</h2>
         </div>
